fix: remove visibleOnFocus prop and class for SkipLink storybook
(visibleOnFocus should not be a prop, it should be the default)

--- a/packages/components-css/src/skip-link/index.scss
+++ b/packages/components-css/src/skip-link/index.scss
@@ -9,12 +9,6 @@
   @include mixin.rhc-skip-link;
 }
 
-.rhc-skip-link--hidden,
-.rhc-skip-link--visible-on-focus {
-  inset-block-start: -9999px;
-  position: fixed;
-}
-
 .rhc-skip-link--focus,
 .rhc-skip-link:focus {
   @include mixin.rhc-skip-link;
